--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -218,6 +218,8 @@
     "relationshipColleague": "Arbeitskollege/in",
     "relationshipStudyFriend": "Studienfreund/in",
     "relationshipOther": "Sonstiges",
+    "relationshipBride": "Braut",
+    "relationshipGroom": "Bräutigam",
     "giftsAndThankYou": "Geschenke & Danksagungen",
     "giftReceived": "Erhaltenes Geschenk",
     "enterGiftReceived": "Geschenk beschreiben...",
